add documentation for channel and userlog endpoints
